alignment fixes

--- a/css/style.css
+++ b/css/style.css
@@ -104,8 +104,8 @@ form.cheats input[type="radio"] + label:before {
 }
 
 form.cheats input[type="checkbox"] + label:before {
-    top: -.2em;
-    line-height: .44em;
+    top: -.1em;
+    line-height: .48em;
     font-size: .9em;
     border-radius: 12.5%;
 }
@@ -116,4 +116,11 @@ form.cheats input[type="radio"]:checked + label:before {
 
 form.cheats input[type="checkbox"]:checked + label:before {
     content: "■";
+}
+
+form.cheats input:not([type="checkbox"]):not([type="radio"]):not([type="button"]):not([type="reset"]):not([type="submit"]),
+form.cheats select,
+form.cheats textarea {
+    box-sizing: border-box;
+    width: 100%;
 }
